--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-name = "census"
+name = "popgetter"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.69"
+geo = "0.24.0"
+geo-types = "0.7.9"
+geojson = "0.23.0"
 serde = { version = "1.0", features = ["derive"] }
+topojson = "0.5.1"
