--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,15 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.69"
+async-trait = "0.1.73"
 fs-err = "2.9.0"
 geo = "0.26.0"
 geo-types = "0.7.11"
 geojson = "0.24.1"
+polars = "0.32.1"
+reqwest = "0.11.20"
 serde = { version = "1.0", features = ["derive"] }
+tempfile = "3.8.0"
+tokio = {version = "1.32.0", features = ["full"]}
 topojson = { git = "https://github.com/dabreegster/topojson", branch = "both_fixes" }
+zip = "0.6.6"
