--- a/us/demo_app/package.json
+++ b/us/demo_app/package.json
@@ -39,11 +39,15 @@
 		"@spectrum-web-components/iconset": "^0.38.0",
 		"@spectrum-web-components/theme": "^0.38.0",
 		"@sveltejs/svelte-virtual-list": "^3.0.1",
+		"@types/d3": "^7.4.1",
+		"d3": "^7.8.5",
 		"duckdb": "^0.8.1",
+		"just-flush": "^2.3.0",
 		"lit-html": "^2.8.0",
 		"lodash": "^4.17.21",
 		"maplibre-gl": "^3.3.1",
 		"pmtiles": "^2.10.0",
-		"svelte-maplibre": "^0.3.5"
+		"svelte-maplibre": "file:~/Projects/svelte-maplibre",
+		"svelte-virtual-table": "^1.0.4"
 	}
 }
