Demostration of Dagster Pipes: wrapping "legacy" england.py as a dagster-pipe (#32)
Adding this as a demonstration of the use of `dagster-pipes`. There are better ways to implement the England pipeline. But this is a useful reference for now.

- england.py is run in its own python venv (with separate dependencies, which happen to conflict with those required by dagster)
- npm / mapshaper, node-based tools are installed and called from `england.py`
- england.py uses the `dagster-pipes` module, which allows logging and metadata to be passed between it and the parent dagster process.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,26 @@ previous_code/us/node_modules
 persist/
 popgetter/cache/
 popgetter.egg-info/
+popgetter.egg-info/*
+popgetter/assets/uk_venv/
+node_modules/
+
+
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
