--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -7,6 +7,6 @@ full_name: Andy Smith
 license: Apache
 org: Urban-Analytics-Technology-Platform
 project_name: popgetter
-project_short_description: A convenience tool for downloading census data from different
-    countries
+project_short_description:
+  A convenience tool for downloading census data from different countries
 url: https://github.com/Urban-Analytics-Technology-Platform/popgetter
