--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,11 @@ ci:
   autoupdate_commit_msg: "chore: update pre-commit hooks"
   autofix_commit_msg: "style: pre-commit fixes"
 
+# Exclude files:
+# - `previous_code` permanently exclude the old code
+# - `popgetter` temporarily exclude the bulk of the code until we are satisfied that all of the repo checks are working correctly
+exclude: "(previous_code|popgetter)"
+
 repos:
   - repo: https://github.com/psf/black-pre-commit-mirror
     rev: "23.11.0"
