WIP: switch to build-backend = "maturin"

--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,7 @@ Thumbs.db
 # Project specific paths
 data/
 persist/
+
+# Used by legacy `england.py` implenmentation. See https://github.com/Urban-Analytics-Technology-Platform/popgetter/issues/40
+node_modules/
+python/popgetter/assets/uk_venv/
