--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,19 @@ classifiers = [
   "Topic :: Scientific/Engineering",
   "Typing :: Typed",
 ]
-dependencies = []
+dependencies = [
+  "dagster",
+  "dagster-cloud",
+  "pandas",
+  "geopandas",
+  "docker",
+  "lxml",
+  "pyarrow",
+  "fsspec",
+  "aiohttp",
+  "matplotlib",
+  "pydantic<2.0.0",
+]
 
 [project.optional-dependencies]
 test = [
@@ -37,8 +49,10 @@ test = [
   "pytest-cov >=3",
 ]
 dev = [
+  "dagster-webserver",
   "pytest >=6",
   "pytest-cov >=3",
+  "maturin >=1.3.2"
 ]
 docs = [
   "sphinx>=7.0",
@@ -58,8 +72,8 @@ Changelog = "https://github.com/Urban-Analytics-Technology-Platform/popgetter/re
 [tool.maturin]
 module-name = "popgetter._core"
 python-packages = ["popgetter"]
-python-source = "src"
-sdist-generator = "git"  # default is cargo
+python-source = "python"
+# sdist-generator = "git"  # default is cargo
 
 
 [tool.cibuildwheel]
@@ -70,14 +84,16 @@ test-skip = ["*universal2:arm64"]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
+addopts = ["-rA", "--showlocals", "--strict-markers", "--strict-config"]
 xfail_strict = true
 filterwarnings = [
   "error",
+  "ignore:.*category=dagster.ExperimentalWarning",
 ]
 log_cli_level = "INFO"
 testpaths = [
   "tests",
+  "popgetter_tests"
 ]
 
 
@@ -90,7 +106,7 @@ port.exclude_lines = [
 ]
 
 [tool.mypy]
-files = ["src", "tests"]
+files = ["python", "tests"]
 python_version = "3.8"
 warn_unused_configs = true
 strict = true
@@ -106,7 +122,7 @@ disallow_incomplete_defs = true
 
 
 [tool.ruff]
-src = ["src"]
+src = ["python"]
 
 [tool.ruff.lint]
 extend-select = [
@@ -157,3 +173,11 @@ messages_control.disable = [
   "missing-module-docstring",
   "wrong-import-position",
 ]
+
+
+[tool.dagster]
+module_name = "popgetter"
+
+
+[tool.codespell]
+ignore-words-list = "ONS,ons"
