--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,14 +55,14 @@ repos:
       - id: ruff
         args: ["--fix", "--show-fixes"]
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v1.7.0"
-    hooks:
-      - id: mypy
-        files: src|tests
-        args: []
-        additional_dependencies:
-          - pytest
+  # - repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: "v1.7.0"
+  #   hooks:
+  #     - id: mypy
+  #       files: src|tests|python
+  #       args: []
+  #       additional_dependencies:
+  #         - pytest
 
   - repo: https://github.com/codespell-project/codespell
     rev: "v2.2.6"
