--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ dev = [
   "types-requests",
   "urllib3<2", # Pin this, pending this PR for dagster https://github.com/dagster-io/dagster/pull/16738
   "pre-commit",
+  "pyright >=1.1.339"
 ]
 docs = [
   "sphinx>=7.0",
@@ -104,7 +105,6 @@ testpaths = [
   "popgetter_tests"
 ]
 
-
 [tool.coverage]
 run.source = ["popgetter"]
 port.exclude_lines = [
@@ -113,26 +113,32 @@ port.exclude_lines = [
   'if typing.TYPE_CHECKING:',
 ]
 
-[tool.mypy]
-mypy_path = ["python", "tests"]
-files = ["python/**/*.py", "tests/**/*.py"]
-python_version = "3.8"
-warn_unused_configs = true
-strict = true
-enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
-warn_unreachable = true
-disallow_untyped_defs = false
-disallow_incomplete_defs = false
+[tool.pyright]
+include = [
+  "python/*.py",
+  "python/assets/*.py",
+  "python/assets/be/*.py",
+  "python/assets/uk/*.py",
+  # "tests/**/*.py",
+]
+exclude = [
+  "python/popgetter/assets/uk/legacy",
+]
+ignore = ["previous_code",
+  "python/popgetter/assets/uk_venv/",
+  "python/popgetter/assets/uk/legacy/*.py",
+]
+defineConstant = { DEBUG = true }
+stubPath = "src/stubs"
 
-[[tool.mypy.overrides]]
-module = "popgetter.*"
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
+reportMissingImports = true
+reportMissingTypeStubs = false
 
+pythonVersion = "3.9"
 
-[[tool.mypy.overrides]]
-module = "dagster.*"
-ignore_missing_imports = true
+typeCheckingMode = "standard"
+useLibraryCodeForTypes = "false"
+
 
 [tool.ruff]
 src = ["python"]
