--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
+      - name: Install pyright
+        run: python -m pip install pyright
       - uses: pre-commit/action@v3.0.0
         with:
           extra_args: --hook-stage manual --all-files
