--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,11 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - name: Install pyright
-        run: python -m pip install pyright
       - uses: pre-commit/action@v3.0.0
         with:
           extra_args: --hook-stage manual --all-files
+        env:
+          SKIP: pyright
       - name: Run PyLint
         run: |
           echo "::add-matcher::$GITHUB_WORKSPACE/.github/matchers/pylint.json"
