--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ dependencies = [
   "aiohttp",
   "matplotlib",
   "pydantic<2.0.0",
-  # "rdflib >=7.0.0" # Testing this within the BEL data. Will add permanently if it works.
+  "rdflib >=7.0.0" # Required to parse BEL TTL Metadata catalogue.
 ]
 
 [project.optional-dependencies]
