--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,8 @@ dependencies = [
   "aiohttp",
   "matplotlib",
   "pydantic<2.0.0",
-  "rdflib >=7.0.0" # Required to parse BEL TTL Metadata catalogue.
+  "rdflib >=7.0.0", # Required to parse BEL TTL Metadata catalogue.
+  "icecream >=2.1.3", # General debugging tool
 ]
 
 [project.optional-dependencies]
