--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
   - repo: https://github.com/psf/black-pre-commit-mirror
     rev: "23.11.0"
     hooks:
+      - id: black
       - id: black-jupyter
 
   - repo: https://github.com/adamchainz/blacken-docs
