initial commit, moving generic pipeline to own module
Co-Authored-By: Sam Greenbury <50113363+sgreenbury@users.noreply.github.com>
Co-Authored-By: Stuart Lynn <209838+stuartlynn@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,9 @@ classifiers = [
   "Typing :: Typed",
 ]
 dependencies = [
-  "dagster",
-  "dagster-cloud",
+  "dagster >=1.6.11",
+  "dagster-cloud >=1.6.11",
+  "dagster-azure >=0.22.11",  # Only required for production deployments, could be moved to an optional
   "pandas >=2.1,<2.2", # Pinned to 2.1 as 2.2 might be causing the failure here https://github.com/Urban-Analytics-Technology-Platform/popgetter/actions/runs/7593850248/job/20684737578
   "geopandas",
   "docker",
