--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ authors = [
 ]
 description = "A convenience tool for downloading census data from different countries"
 readme = "README.md"
-requires-python = ">=3.11,<3.12"
+requires-python = ">=3.11"
 classifiers = [
   "Development Status :: 1 - Planning",
   "Intended Audience :: Science/Research",
@@ -30,10 +30,10 @@ classifiers = [
   "Typing :: Typed",
 ]
 dependencies = [
-  "dagster",
-  "dagster-cloud",
+  "dagster >=1.6.11", # Version matched to `dagster-cloud` and `dagster-webserver` (see below)
+  "dagster-cloud >=1.6.11", # Version matched to dagster (see above)
   "pandas >=2.1,<2.2", # Pinned to 2.1 as 2.2 might be causing the failure here https://github.com/Urban-Analytics-Technology-Platform/popgetter/actions/runs/7593850248/job/20684737578
-  "geopandas",
+  "geopandas >=0.14.1", # This probably won't resolve to the latest version of geopandas,
   "docker",
   "lxml",
   "pyarrow",
@@ -51,7 +51,7 @@ test = [
   "pytest-cov >=3",
 ]
 dev = [
-  "dagster-webserver",
+  "dagster-webserver >=1.6.11", # Version matched to dagster (see above)
   "pytest >=6",
   "pytest-cov >=3",
   "maturin >=1.3.2",
