focus on 3.11 current target and tests 3.12 for future
Updates various configs to focus current development on Python 3.11. Includes tests for v3.12 for future ref (ignoring warnings from Dagster itself).
Drops tests CI tests for python 3.10

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,13 +33,13 @@ dependencies = [
   "dagster >=1.6.11", # Version matched to `dagster-cloud` and `dagster-webserver` (see below)
   "dagster-cloud >=1.6.11", # Version matched to dagster (see above)
   "pandas >=2.1,<2.2", # Pinned to 2.1 as 2.2 might be causing the failure here https://github.com/Urban-Analytics-Technology-Platform/popgetter/actions/runs/7593850248/job/20684737578
-  "geopandas >=0.14.1", # This probably won't resolve to the latest version of geopandas,
-  "docker",
-  "lxml",
-  "pyarrow",
-  "fsspec",
-  "aiohttp",
-  "matplotlib",
+  "geopandas >=0.14.1", # This probably won't resolve to the latest version of geopandas, due to version restrictions pandas package (see above).
+  "docker",  # Use and version to be confirmed, see https://github.com/Urban-Analytics-Technology-Platform/popgetter/issues/38#issuecomment-2009350512
+  "lxml >=4.9.3",  # Used by `download_from_wfs` function
+  "pyarrow", # Used interface with polars-arrow
+  "fsspec",  # Used in legacy `get_path_to_cache` function (pending removal)
+  "aiohttp", # Used by `fsspec` in legacy `get_path_to_cache` function (pending removal)
+  "matplotlib >=3.8.2", # Used in utils.py, for plotting thumbnail maps in dagster metadata
   "pydantic<2.0.0",
   "rdflib >=7.0.0", # Required to parse BEL TTL Metadata catalogue.
   "icecream >=2.1.3", # General debugging tool
@@ -179,7 +179,7 @@ isort.required-imports = ["from __future__ import annotations"]
 
 
 [tool.pylint]
-py-version = ">=3.11,<3.12"
+py-version = "3.11"
 ignore-paths = [".*/_version.py"]
 extension-pkg-allow-list = ["popgetter._core"]
 reports.output-format = "colorized"
