--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ dependencies = [
   "fsspec",  # Used in legacy `get_path_to_cache` function (pending removal)
   "aiohttp", # Used by `fsspec` in legacy `get_path_to_cache` function (pending removal)
   "matplotlib >=3.8.2", # Used in utils.py, for plotting thumbnail maps in dagster metadata
-  "pydantic>=2",
+  "pydantic>=2.7.1", # Schema validation and serialisation for downstream CLI consumption
   "rdflib >=7.0.0", # Required to parse BEL TTL Metadata catalogue.
   "icecream >=2.1.3", # General debugging tool
   "python-slugify >=8.0.4" # Required for generating asset names from GBR Ordnance Survey OpenData Product names
