--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,8 @@ dependencies = [
   "pydantic>=2.7.1", # Schema validation and serialisation for downstream CLI consumption. As of Apr 2024, Dagster enforces a <3.0 bound on pydantic so we don't need one ourselves.
   "rdflib >=7.0.0", # Required to parse BEL TTL Metadata catalogue.
   "icecream >=2.1.3", # General debugging tool
-  "python-slugify >=8.0.4" # Required for generating asset names from GBR Ordnance Survey OpenData Product names
+  "python-slugify >=8.0.4", # Required for generating asset names from GBR Ordnance Survey OpenData Product names
+  "jcs >=0.2.1", # For generating IDs from class attributes
 ]
 
 [project.optional-dependencies]
