--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dependencies = [
   "jcs >=0.2.1", # For generating IDs from class attributes
   "beautifulsoup4 >=4.12.3", # For extracting catalogs from web pages
   "openpyxl >=3.1.3", # For reading Excel files
+  "iso639-lang >=2.2.3", # For checking ISO639-3 language codes
 ]
 
 
