--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,8 @@ jobs:
         run: >-
           python -m pytest -ra --cov --cov-report=xml --cov-report=term
           --durations=20
+        env:
+          DAGSTER_HOME: ${{ runner.temp }}
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v4.5.0
