--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,11 +69,7 @@ dev = [
   "pyright >=1.1.339"  # Used for static type checking (mypy is not yet compatible with Dagster)
 ]
 docs = [
-  "sphinx>=7.0",
-  "myst_parser>=0.13",
-  "sphinx_copybutton",
-  "sphinx_autodoc_typehints",
-  "furo>=2023.08.17",
+  "mkdocs >=1.6.0"
 ]
 
 [project.urls]
