--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
   "beautifulsoup4 >=4.12.3", # For extracting catalogs from web pages
   "openpyxl >=3.1.3", # For reading Excel files
   "iso639-lang >=2.2.3", # For checking ISO639-3 language codes
+  "aiohttp >=3.9.5", # Async HTTP
 ]
 
 
