--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ dependencies = [
   "openpyxl >=3.1.3", # For reading Excel files
   "iso639-lang >=2.2.3", # For checking ISO639-3 language codes
   "aiohttp >=3.9.5", # Async HTTP
+  "more-itertools >= 10.3.0", # For batched iterator
 ]
 
 
