Initial rename of package popgetter to poppusher

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,9 +4,9 @@ ci:
 
 # Exclude files:
 # - `previous_code` permanently exclude the old code
-# - `popgetter` temporarily exclude the bulk of the code until we are satisfied that all of the repo checks are working correctly
-# exclude: "(previous_code|popgetter)"
-exclude: "(previous_code|python/popgetter/assets/(uk/legacy|us)|tests/demo_data)"
+# - `poppusher` temporarily exclude the bulk of the code until we are satisfied that all of the repo checks are working correctly
+# exclude: "(previous_code|poppusher)"
+exclude: "(previous_code|python/poppusher/assets/(uk/legacy|us)|tests/demo_data)"
 
 repos:
   - repo: https://github.com/psf/black-pre-commit-mirror
@@ -99,4 +99,4 @@ repos:
         entry: pyright
         types: [python]
         exclude: (.pre-commit-config.yaml|noxfile.py|tests)
-        # args: ["--ignoreexternal", "--verifytypes", "popgetter"]
+        # args: ["--ignoreexternal", "--verifytypes", "poppusher"]
