--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,6 @@
 site_name: Poppusher
+
+plugins:
+  - search
+  - mermaid2:
+      javascript: https://unpkg.com/mermaid@10.4.0/dist/mermaid.esm.min.mjs
