--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -58,10 +58,27 @@ jobs:
   #       with:
   #         path: wheelhouse/*.whl
 
-  upload_all:
+  upload_release:
     # needs: [build_wheels, make_sdist]
     needs: [make_sdist]
     environment: release
+    permissions:
+      id-token: write
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: artifact
+          path: dist
+
+      - uses: pypa/gh-action-pypi-publish@release/v1
+        if: github.event_name == 'release' && github.event.action == 'published'
+
+  upload_test:
+    # needs: [build_wheels, make_sdist]
+    needs: [make_sdist]
+    environment: testpypi
     permissions:
       id-token: write
     runs-on: ubuntu-latest
@@ -77,6 +94,3 @@ jobs:
           # Remember to tell (test-)pypi about this repo before publishing
           # Remove this line to publish to PyPI
           repository-url: https://test.pypi.org/legacy/
-
-      - uses: pypa/gh-action-pypi-publish@release/v1
-        if: github.event_name == 'release' && github.event.action == 'published'
